# jnj-android

_docs/: README.md
_docs/planning/: memo3.md
backend/python/: pyproject.toml
backend/python/src/android/: adb_controller_old.py  adb_simple.py
backend/python/src/apps/rok/: actions.py  app.py  missions.py  rok_controller.py  ui_config.py  ui_detector.py
backend/python/src/servers/: main.py
backend/python/src/waydroid/: container.py  weston.py
